src/aiforge_deploy/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiforge-service
  namespace: aiforge
  labels:
    app: aiforge-engine
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: aiforge-engine
---
apiVersion: v1
kind: Service
metadata:
  name: aiforge-service-nodeport
  namespace: aiforge
  labels:
    app: aiforge-engine
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
      protocol: TCP
      name: http
  selector:
    app: aiforge-engine
